--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Tsygankova Viktoria</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Books</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Viktoria!</h1>
-				<p>Я завела сайт для обзоров книг и практики навык письма. <a href="/about">Больше обо мнею..</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:frayalisia@gmail.com">email</a></li>
-        		<li><a href="https://github.com/frayalisia">github.com/frayalisia</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Приветствие
+---
+<div class="blurb">
+  <h1>Всем привет, меня зовут Виктория!</h1>
+  <p>Я завела сайт для обзоров книг и практики навык письма. <a href="/about">Больше обо мнею..</a></p>
+</div><!-- /.blurb -->
