--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,6 @@
 ---
-layout: default
-title: About me
+layout: post
+title: "Обо мне"
 ---
 
-Меня зовут Виктория Цыганкова.
-Я компьютерный лингвист. 
+Здесь будет интересная информация обо мне.
