--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,9 @@
 ---
-layout: about
+layout: default
 title: "Обо мне"
 ---
+<h1>{{ page.title }}</h1>
 
-Здесь будет интересная информация обо мне.
+<div class="about">
+  Здесь будет интересная информация обо мне.
+</div>
